--- a/assero-backend/package.json
+++ b/assero-backend/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
-    "ipfs-http-client": "^60.0.1"
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
+    "express": "^5.1.0",
+    "firebase-admin": "^13.2.0",
+    "ipfs-http-client": "^60.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   }
 }
