--- a/assero-backend/package.json
+++ b/assero-backend/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -6,9 +7,15 @@
     "ethers": "^6.13.5",
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
-    "ipfs-http-client": "^60.0.1",
+    "ipfs-http-client": "^56.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
