--- a/asset-contract/package.json
+++ b/asset-contract/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hardhat-project",
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7",
+    "@openzeppelin/contracts": "^5.3.0",
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
+    "ethers": "^6.13.5",
     "ipfs-http-client": "^60.0.1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19"
+    "dotenv": "^16.5.0",
+    "hardhat": "^2.23.0"
   }
 }
