--- a/assero-backend/package.json
+++ b/assero-backend/package.json
@@ -1,16 +1,10 @@
 {
   "type": "module",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.2.0",
-    "ipfs-http-client": "^56.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2"
+    "express": "^5.1.0"
   },
   "scripts": {
     "dev": "nodemon src/index.js"
