--- a/assero-frontend/package.json
+++ b/assero-frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.1",
-    "next": "15.1.6",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
